[package]
name = "smg_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
glam = "0.27.0"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
smg_lib = { git = "https://github.com/JustJakeee/smg_lib.git " }
